
	* doc/texinfo.texi (Functions in Typed Languages): Remove
		duplicate description of @deftypemethod.
	From: KHMarbaise@p69.ks.fido.de (Karl Heinz Marbaise)
	Date: Wed, 07 Jan 1998 11:11:50 +0100

	* info/session.c (info_get_input_char) [EINTR]: Keep reading if we
		get EINTR.
	From: Andreas Schwab <schwab@issan.informatik.uni-dortmund.de>
	Date: 22 Dec 1997 10:32:53 +0100

Sat Feb 21 17:41:26 1998  Karl Berry  <karl@cs.umb.edu>

	* makeinfo/makeinfo.c (find_and_load): Malloc enough room for the
		null as well as the newline.
	From: "John W. Eaton" <jwe@bevo.che.wisc.edu>
	Date: Tue, 30 Sep 1997 21:12:01 -0500

	* util/texindex.c (--version),
	* makeinfo/makeinfo.c (cm_today),
	* makeinfo/makeinfo.c (print_version_info): Version strings etc. do not
		need translation. 
	From: Karl Eichwalder <ke@suse.de>
	Date: 13 Sep 1997 16:20:02 +0200

	* info/echo-area.c: Rewrite pluralization to be translatable.
	From: Karl Eichwalder <ke@suse.de>
	Date: 13 Sep 1997 16:20:02 +0200

	* util/texindex.c,
	* info/info.c,
	* makeinfo/makeinfo.c,
	* util/install-info.c: --version: Give year as argument to printf,
		to reduce the number of translations needed.
	From: Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
	Date: 02 Sep 1997 18:01:26 +0200

	* util/texindex.c: Remove the fnctl.h and sys/file.h conditional #includes, they are
	already in lib/system.h.
	From: "Philippe De Muyter" <phdm@macqel.be>
	Date: Thu, 21 Aug 1997 20:16:49 +0200 (MET DST)

	* info/terminal.c (terminal_begin_using_terminal,
 	  terminal_end_using_terminal): #ifdef SIGWINCH settings for
	 	  m68k-motorola-sysv.
	From: "Philippe De Muyter" <phdm@macqel.be>
	Date: Thu, 21 Aug 1997 20:16:49 +0200 (MET DST)

	* info/filesys.c (info_suffixes): Add /index as a possibility for
		subdirectories.
	From: Matthew Wilcox <willy@odie.barnet.ac.uk>
	Date: Wed, 6 Aug 1997 15:55:16 +0100 (BST)

	* configure.in: Redirect texconfig input from /dev/null to avoid
		stoppage.