@@ -240,7 +240,7 @@
 
 (define_insn "tstsi_1"
   [(set (cc0)
-	(match_operand:SI 0 "nonimmediate_operand" "r"))]
+	(match_operand:SI 0 "register_operand" "r"))]
   ""
   "*
 {
@@ -254,7 +254,7 @@
 
 (define_expand "tstsi"
   [(set (cc0)
-	(match_operand:SI 0 "nonimmediate_operand" ""))]
+	(match_operand:SI 0 "register_operand" ""))]
   ""
   "
 {
@@ -266,7 +266,7 @@
 
 (define_insn "tsthi_1"
   [(set (cc0)
-	(match_operand:HI 0 "nonimmediate_operand" "r"))]
+	(match_operand:HI 0 "register_operand" "r"))]
   ""
   "*
 {
@@ -280,7 +280,7 @@
 
 (define_expand "tsthi"
   [(set (cc0)
-	(match_operand:HI 0 "nonimmediate_operand" ""))]
+	(match_operand:HI 0 "register_operand" ""))]
   ""
   "
 {
@@ -292,7 +292,7 @@
 
 (define_insn "tstqi_1"
   [(set (cc0)
-	(match_operand:QI 0 "nonimmediate_operand" "q"))]
+	(match_operand:QI 0 "nonimmediate_operand" "qm"))]
   ""
   "*
 {
@@ -6692,8 +6692,8 @@ byte_xor_operation:
 (define_insn ""
   [(set (pc)
 	(if_then_else (match_operator 0 "arithmetic_comparison_operator"
-				      [(plus:SI (match_operand:SI 1 "nonimmediate_operand" "+c*r")
-						(match_operand:SI 2 "general_operand" "ri"))
+				      [(plus:SI (match_operand:SI 1 "nonimmediate_operand" "+c*r,!m")
+						(match_operand:SI 2 "general_operand" "ri,ri"))
 				       (const_int 0)])
 		      (label_ref (match_operand 3 "" ""))
 		      (pc)))
@@ -6709,14 +6709,45 @@ byte_xor_operation:
       operands[2] == constm1_rtx && ix86_cpu == PROCESSOR_K6)
     return \"loop %l3\";
 
-  if (operands[2] == constm1_rtx)
-    output_asm_insn (AS1 (dec%L1,%1), operands);
+  if (GET_CODE (operands[1]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[1], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[1], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[1], 0), 0) ) == 0 ) ) )
+    {
+      operands[4] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[4] = gen_rtx_REG (SImode, 0); // eax
+    }
 
-  else if (operands[2] == const1_rtx)
-    output_asm_insn (AS1 (inc%L1,%1), operands);
+    output_asm_insn (AS2 (xchg%L1,%4,%1), operands);
+    output_asm_insn (AS1 (bswap,%4), operands);
+    
+    if (operands[2] == constm1_rtx)
+      output_asm_insn (AS1 (dec%L4,%4), operands);
 
+    else if (operands[2] == const1_rtx)
+      output_asm_insn (AS1 (inc%L4,%4), operands);
+
+    else
+      output_asm_insn (AS2 (add%L4,%2,%4), operands);
+
+    output_asm_insn (AS1 (bswap,%4), operands);
+    output_asm_insn (AS2 (xchg%L1,%4,%1), operands);
+  }
   else
-    output_asm_insn (AS2 (add%L1,%2,%1), operands);
+  {
+    if (operands[2] == constm1_rtx)
+      output_asm_insn (AS1 (dec%L1,%1), operands);
+
+    else if (operands[2] == const1_rtx)
+      output_asm_insn (AS1 (inc%L1,%1), operands);
+
+    else
+      output_asm_insn (AS2 (add%L1,%2,%1), operands);
+  }
 
   return AS1 (%J0,%l3);
 }")
@@ -6724,8 +6755,8 @@ byte_xor_operation:
 (define_insn ""
   [(set (pc)
 	(if_then_else (match_operator 0 "arithmetic_comparison_operator"
-				      [(minus:SI (match_operand:SI 1 "nonimmediate_operand" "+r")
-						 (match_operand:SI 2 "general_operand" "ri"))
+				      [(minus:SI (match_operand:SI 1 "nonimmediate_operand" "+r,!m")
+						 (match_operand:SI 2 "general_operand" "ri,ri"))
 				       (const_int 0)])
 		      (label_ref (match_operand 3 "" ""))
 		      (pc)))
@@ -6736,21 +6767,54 @@ byte_xor_operation:
   "*
 {
   CC_STATUS_INIT;
-  if (operands[2] == const1_rtx)
-    output_asm_insn (AS1 (dec%L1,%1), operands);
 
-  else if (operands[1] == constm1_rtx)
-    output_asm_insn (AS1 (inc%L1,%1), operands);
+  if (GET_CODE (operands[1]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[1], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[1], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[1], 0), 0) ) == 0 ) ) )
+    {
+      operands[4] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[4] = gen_rtx_REG (SImode, 0); // eax
+    }
 
+    output_asm_insn (AS2 (xchg%L1,%4,%1), operands);
+    output_asm_insn (AS1 (bswap,%4), operands);
+    
+    if (operands[2] == const1_rtx)
+      output_asm_insn (AS1 (dec%L4,%4), operands);
+
+    else if (operands[2] == constm1_rtx)
+      output_asm_insn (AS1 (inc%L4,%4), operands);
+
+    else
+      output_asm_insn (AS2 (sub%L4,%2,%4), operands);
+    
+    output_asm_insn (AS1 (bswap,%4), operands);
+    output_asm_insn (AS2 (xchg%L1,%4,%1), operands);
+  }
   else
-    output_asm_insn (AS2 (sub%L1,%2,%1), operands);
+  {
+    if (operands[2] == const1_rtx)
+      output_asm_insn (AS1 (dec%L1,%1), operands);
+
+    // lcs: the following was '(operands[1] == constm1_rtx)' ??!
+    else if (operands[2] == constm1_rtx)
+      output_asm_insn (AS1 (inc%L1,%1), operands);
+
+    else
+      output_asm_insn (AS2 (sub%L1,%2,%1), operands);
+  }
 
   return AS1 (%J0,%l3);
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (ne (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (ne (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int 0))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6762,13 +6826,35 @@ byte_xor_operation:
 {
   CC_STATUS_INIT;
   operands[2] = const1_rtx;
-  output_asm_insn (AS2 (sub%L0,%2,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (sub%L3,%2,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS2 (sub%L0,%2,%0), operands);
+  }
   return \"jnc %l1\";
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (eq (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (eq (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int 0))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6780,13 +6866,35 @@ byte_xor_operation:
 {
   CC_STATUS_INIT;
   operands[2] = const1_rtx;
-  output_asm_insn (AS2 (sub%L0,%2,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (sub%L3,%2,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS2 (sub%L0,%2,%0), operands);
+  }
   return \"jc %l1\";
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (ne (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (ne (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int 1))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6797,13 +6905,35 @@ byte_xor_operation:
   "*
 {
   CC_STATUS_INIT;
-  output_asm_insn (AS1 (dec%L0,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS1 (dec%L3,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS1 (dec%L0,%0), operands);
+  }
   return \"jnz %l1\";
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (eq (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (eq (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int 1))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6814,13 +6944,35 @@ byte_xor_operation:
   "*
 {
   CC_STATUS_INIT;
-  output_asm_insn (AS1 (dec%L0,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS1 (dec%L3,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS1 (dec%L0,%0), operands);
+  }
   return \"jz %l1\";
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (ne (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (ne (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int -1))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6831,13 +6983,35 @@ byte_xor_operation:
   "*
 {
   CC_STATUS_INIT;
-  output_asm_insn (AS1 (inc%L0,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS1 (inc%L3,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS1 (inc%L0,%0), operands);
+  }
   return \"jnz %l1\";
 }")
 
 (define_insn ""
   [(set (pc)
-	(if_then_else (eq (match_operand:SI 0 "register_operand" "+r")
+	(if_then_else (eq (match_operand:SI 0 "general_operand" "+r,!g")
 			  (const_int -1))
 		      (label_ref (match_operand 1 "" ""))
 		      (pc)))
@@ -6848,7 +7022,29 @@ byte_xor_operation:
   "*
 {
   CC_STATUS_INIT;
-  output_asm_insn (AS1 (inc%L0,%0), operands);
+  if (GET_CODE (operands[0]) == MEM)
+  {
+    if (GET_CODE( XEXP( operands[0], 0 ) ) == PLUS &&
+	( ( REG_P( XEXP( XEXP( operands[0], 0), 0) ) &&
+	    REGNO( XEXP( XEXP( operands[0], 0), 0) ) == 0 ) ) )
+    {
+      operands[3] = gen_rtx_REG (SImode, 1); // edx
+    }
+    else
+    {
+      operands[3] = gen_rtx_REG (SImode, 0); // eax
+    }
+
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS1 (inc%L3,%3), operands);
+    output_asm_insn (AS1 (bswap,%3), operands);
+    output_asm_insn (AS2 (xchg%L0,%3,%0), operands);
+  }
+  else
+  {
+    output_asm_insn (AS1 (inc%L0,%0), operands);
+  }
   return \"jz %l1\";
 }")
 
