@@ -1,0 +1,14 @@
+	.file	"tinfo.cc"
+gcc2_compiled.:
+	.globl os
+	.section	".sbss","aw",@nobits
+	.align 2
+os:
+	.space	4
+	.size	 os,4
+	.globl ns
+	.align 2
+ns:
+	.space	4
+	.size	 ns,4
+	.ident	"GCC: (GNU) 2.95.3 20010315 (release/lcs-2002-04-12)"
