@@ -1,1 +1,1 @@
-char *version_string = "2.95.3 20010315 (release/lcs-2002-02-08)";
+char *version_string = "2.95.3 20010315 (release/lcs-2002-04-12)";
